# EventStreamMonitor

./: .bazelignore  .bazelrc  .gitignore  BAZEL_BUILD_FILES.md  BAZEL_BUILD_IN_EXPLANATION.md  BAZEL_QUICKSTART.md  BAZEL_SETUP.md  BAZEL_STATUS.md  BAZEL_TEST_RESULTS.md  BUILD  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_TO_OPENSOURCE.md  DRY_RUN_COMPLETE.md  DRY_RUN_FINAL_REPORT.md  DRY_RUN_REPORT.md  DRY_RUN_RESULTS.md  DRY_RUN_SUMMARY.md  Dockerfile  ERROR_STREAMING_SUCCESS.md  GITHUB_ACTIVITY_AGENT.md  GITHUB_SETTINGS.md  GUNICORN_HIERARCHY.md  LICENSE  LOAD_TEST_RESULTS.md  LOG_MONITORING_QUICKSTART.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_SETUP.md  MICROSERVICES_SUMMARY.md  MIGRATION_GUIDE.md  MODULE.bazel  PERFORMANCE_CONFIG.md  PRODUCTION_STRUCTURE.md  PRODUCTION_STRUCTURE_README.md  PROJECT_DESCRIPTION.md  Pipfile  QUICK_START.md  README.md  README_PRODUCTION.md  (+10 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.trunk/: trunk.yaml
common/: BUILD
deployments/: docs.txt
docs/: authen_author.txt  grpc.txt  learn_events.txt  log_monitoring_system.md  models.txt  redis_integration.md  secret_management.md
pcaps/: creat_aero.pcap  test.pcap
proto/: BUILD
results/: README.md
scripts/: contribute_redis_examples.py  contribute_to_opensource.md  create_draft_pr.sh  dry_run_tests.py  find_contribution_opportunities.py  find_good_first_issue.py  fork_all_repos.sh  generate_error_events.py  github_activity_agent.py  health_check.py  load_test_all_services.py  long_duration_load_test.py  pick_random_repo.sh  (+10 more)
(+354 files in other folders)
